[gd_scene load_steps=12 format=3 uid="uid://g5f4k1giivdi"]

[ext_resource type="Script" uid="uid://dkld1w71gheow" path="res://Scripts/typing_scene.gd" id="1_qm8nt"]
[ext_resource type="Texture2D" uid="uid://gjyobda7idnt" path="res://Images/phase4.png" id="2_15q2a"]
[ext_resource type="Theme" uid="uid://cnrmgawvhwgx8" path="res://Assets/screen_font.tres" id="3_8534v"]
[ext_resource type="Shader" uid="uid://4rekmlv0x6x7" path="res://Assets/curvedshader.gdshader" id="3_hutyt"]
[ext_resource type="PackedScene" uid="uid://dr252hvw8htoy" path="res://Scenes/transition.tscn" id="4_hutyt"]
[ext_resource type="AudioStream" uid="uid://7j7xsjbxy2yd" path="res://Assets/typing.mp3" id="5_egsap"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_egsap"]
shader = ExtResource("3_hutyt")
shader_parameter/wave_amplitude = 30.0
shader_parameter/wave_frequency = 140.0

[sub_resource type="Animation" id="Animation_dn4f4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Running"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ButtonContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_xandg"]
resource_name = "compiling"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2.5, 3.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": ["Running", "Running.", "Running..", "Running...", "Running...[br]
Compilation failed.", "Running...[br]
Compilation failed. Idiot."]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ButtonContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s71e2"]
_data = {
&"RESET": SubResource("Animation_dn4f4"),
&"compiling": SubResource("Animation_xandg")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_15q2a"]
shader = ExtResource("3_hutyt")
shader_parameter/wave_amplitude = 30.0
shader_parameter/wave_frequency = 140.0

[node name="Control2" type="Control" node_paths=PackedStringArray("computer_text", "compilation_button", "button_container", "sound", "transition")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qm8nt")
computer_text = NodePath("TextureRect/RichTextLabel")
code_lines = "There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. "
compilation_button = NodePath("TextureRect/RichTextLabel/Run")
button_container = NodePath("TextureRect/RichTextLabel/ButtonContainer")
sound = NodePath("AudioStreamPlayer")
transition = NodePath("Transition")
scene_id = 3

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_15q2a")
expand_mode = 1

[node name="RichTextLabel" type="RichTextLabel" parent="TextureRect"]
material = SubResource("ShaderMaterial_egsap")
clip_contents = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.29000002
anchor_top = 0.31300002
anchor_right = 0.72900003
anchor_bottom = 0.67300004
offset_left = 20.919983
offset_top = -112.82402
offset_right = -5.8080444
offset_bottom = -113.104034
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("3_8534v")
bbcode_enabled = true
text = "Running"
scroll_following = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="TextureRect/RichTextLabel"]
libraries = {
&"": SubResource("AnimationLibrary_s71e2")
}

[node name="Run" type="Button" parent="TextureRect/RichTextLabel"]
visible = false
top_level = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -279.99994
offset_top = -320.0
offset_right = -236.99994
offset_bottom = -289.0
grow_horizontal = 0
grow_vertical = 0
rotation = 0.17453292
theme = ExtResource("3_8534v")
text = "run"

[node name="ButtonContainer" type="Control" parent="TextureRect/RichTextLabel"]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -33.0
grow_horizontal = 2
grow_vertical = 0

[node name="leave" type="Button" parent="TextureRect/RichTextLabel/ButtonContainer"]
top_level = true
layout_mode = 0
offset_left = 695.00006
offset_top = 301.00003
offset_right = 755.00006
offset_bottom = 332.00003
rotation = 0.08726646
theme = ExtResource("3_8534v")
text = "leave"

[node name="keep" type="Button" parent="TextureRect/RichTextLabel/ButtonContainer"]
top_level = true
material = SubResource("ShaderMaterial_15q2a")
layout_mode = 0
offset_left = 439.00003
offset_top = 309.0
offset_right = 571.00006
offset_bottom = 340.0
rotation = 0.10471976
theme = ExtResource("3_8534v")
text = "keep trying"

[node name="Transition" parent="." instance=ExtResource("4_hutyt")]
visible = false
layout_mode = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_egsap")

[connection signal="pressed" from="TextureRect/RichTextLabel/Run" to="." method="_on_button_pressed"]
[connection signal="pressed" from="TextureRect/RichTextLabel/ButtonContainer/leave" to="." method="_on_leave_pressed"]
[connection signal="pressed" from="TextureRect/RichTextLabel/ButtonContainer/keep" to="." method="_on_keep_pressed"]
